# sampleGen

./: .gitignore  README.md  pyproject.toml
configs/: README.md
data/: README.md
memory/: 变更记录.md  回滚记录.md  执行计划.md  项目说明.md
scripts/: README.md  evaluate.py  prepare_data.py  train_v1.py  train_v2.py
src/samplegen/: __init__.py
src/samplegen/data/: pipeline.py
src/samplegen/evaluation/: __init__.py  evaluate.py
src/samplegen/models/: __init__.py  base.py
src/samplegen/training/: __init__.py  train.py
src/samplegen/utils/: paths.py
tests/: test_imports.py
